Closed
Bug 80146
Opened 24 years ago
Closed 24 years ago
tooltip size problem in gtk embedding widget
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.3
People
(Reporter: timecop, Assigned: blizzard)
Details
(Keywords: embed)
Attachments
(3 files)
|
7.25 KB,
image/png
|
Details | |
|
346 bytes,
patch
|
Details | Diff | Splinter Review | |
|
2.09 KB,
patch
|
Details | Diff | Splinter Review |
when using TestGtkEmbed, tooltips from title="" tags appear too small for the
text they contain.
reproducible always, for example at http://www.ne.jp/asahi/linux/timecop - hover
over title logo.
Comment 3•24 years ago
|
||
Marking NEW. To get this patch looked at .
| Assignee | ||
Updated•24 years ago
|
Target Milestone: --- → mozilla0.9.2
| Assignee | ||
Updated•24 years ago
|
Target Milestone: mozilla0.9.2 → mozilla0.9.3
This patch sets the tooltip window style correctly, so that
background/foreground colors are set, then draws a tooltip-style border around
the window...
Looks identical to GtkTooltips now.
Very nice.
Looking for reviews. :)
| Assignee | ||
Comment 6•24 years ago
|
||
r/sr=blizzard
| Assignee | ||
Comment 8•24 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
its in, it works, marking verified
Status: RESOLVED → VERIFIED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•