bug #80146.  make gtk tooltips in the embedding widget look nicer.  patch from <timecop@network.email.ne.jp>.  r=tor,sr=blizzard